<resources>
    <string name="app_name">Electronica</string>
    <string name="def">Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="my_account">My Account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="popular_products">Popular Products</string>
    <string name="title">Title</string>
    <string name="open_nav">Open Navigation Bar</string>
    <string name="close_nav">Close Navigation Bar</string>
    <string name="dummy_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at orci neque. Ut volutpat dignissim diam, suscipit eleifend diam blandit sed. Curabitur metus nisi, sollicitudin in pellentesque ut, tincidunt consectetur.
    </string>
    <string name="free_shipping">Free Shipping</string>
    <string name="product_details">Product Details</string>
    <string name="textview">TextView</string>
    <string name="read_more">Read More</string>
    <string name="coupon_question">Have a coupon code? Enter here 👇</string>
    <string name="coupon_code">coupon code</string>
    <string name="continueTxt">Continue to cart</string>
    <string name="_1">1</string>
    <string name="share">Share</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="skip_for_now"><![CDATA[Skip for now >>]]></string>
    <string name="email_id">Email Id</string>
    <string name="already_a_member_sign_in">Already a member? Sign In</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="version_3_0">version 3.0</string>
    <string name="gadget_store">Gadget Store</string>
    <string name="hello">Hello</string>
    <string name="buddy">Buddy</string>
    <string name="hello_emoji">👋🏼</string>
    <string name="apply">Apply</string>
    <string name="rate_us">Rate Us</string>
    <string name="thanks_for_rating_us">Thanks for rating us 😀</string>
    <string name="login_to_access_your_account">Login to access your account</string>
    <string name="deliver_to">Deliver to</string>
    <string name="subtotal">Subtotal</string>
    <string name="deliver_fee">Deliver Fee</string>
    <string name="discount">Discount</string>
    <string name="place_order">Place Order</string>
</resources>