<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/logo_rectangle" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/inputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout"
                android:orientation="vertical"
                android:padding="30dp"
                android:weightSum="4">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_id"
                    app:startIconDrawable="@drawable/profile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:inputType="text|textEmailAddress|textAutoComplete" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    app:startIconDrawable="@drawable/lock"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/icon_grey"
                    app:passwordToggleDrawable="@drawable/eye_selector"
                    app:passwordToggleContentDescription="Toggle visibility">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:inputType="text|textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_ripple_effect"
                    android:text="@string/login"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/newUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:text="@string/new_user_sign_up"
                    android:textColor="@color/teal" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:padding="20dp">

                <TextView
                    android:id="@+id/skipLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:text="@string/skip_for_now"
                    android:textStyle="italic"
                    android:textColor="@color/txt_grey"
                    android:textSize="14sp" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>