<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_popular_products"
    android:layout_width="170dp"
    android:layout_height="265dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="0dp"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:padding="8dp"
            android:background="@drawable/image_box"
            android:backgroundTint="@color/bkg_red">

            <ImageView
                android:id="@+id/popular_products_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/popular_products_image"
                android:layout_alignBottom="@id/popular_products_image"
                android:background="@drawable/general_box"
                android:backgroundTint="@color/trans_black"
                android:padding="4dp"
                android:text="@string/free_shipping"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/items_hotSales_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/image_view"
            android:background="@color/white"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/popular_products_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/popular_products_price"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginEnd="8dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popular_products_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="₹0"
                android:textColor="@color/teal"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popular_products_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popular_products_name"
                android:layout_marginTop="10dp"
                android:text="@string/dummy_text"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/txt_grey" />

        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
