<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.home.home_detail.DetailActivity">

    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/angle_left" />

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/product_details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/popMenu"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/menu_dots" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabLayout"
        android:fillViewport="true"
        tools:ignore="SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/imageLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bkg_white"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/productImg"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/samsung_tv4" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/favBtnLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/imageLayout"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/general_box"
                    android:backgroundTint="@color/teal"
                    android:padding="4dp"
                    android:text="@string/free_shipping"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/favBtn"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/heart" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/productInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/favBtnLayout"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Samsung UHD TV 23850H"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/productDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/dummy_text"
                    android:textColor="@color/txt_grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/readMoreInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:textColor="@color/teal"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="₹ 72299"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Border Bottom -->
            <View
                android:id="@+id/borderBottom1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/productInfoContainer"
                android:background="@color/bkg_grey" />

            <include
                layout="@layout/coupon_code_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@id/borderBottom1"/>

            <View
                android:id="@+id/borderBottom2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/couponContainer"
                android:background="@color/bkg_grey" />

            <LinearLayout
                android:id="@+id/addCartLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/borderBottom2"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/qtyAmountBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/minusBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/square_minus"
                        app:tint="@color/teal"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/qtyTxt"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxWidth="50dp"
                        android:text="@string/_1"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/plusBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/square_plus"
                        app:tint="@color/teal" />
                </LinearLayout>

                <Button
                    android:id="@+id/continueBtn"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@drawable/btn_ripple_effect"
                    android:letterSpacing="0.01"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/continueTxt"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

</RelativeLayout>